--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,15 +5,9 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - name: Set the Username Environment Variable
-    env:
-      LT_USERNAME: "taufiq.maredia786"
-    init: echo export $LT_USERNAME
+  - init: echo export "taufiq.maredia786"
 
-  - name: Set the Access Key Environment Variable
-    env:
-      LT_ACCESS_KEY: "tS0UIcAHxNNsAcA4qjmIaaEgCoJVnnxFfb5VmIlB980N9hUJaT"
-    init: echo export $LT_ACCESS_KEY  
+  - init: echo export "tS0UIcAHxNNsAcA4qjmIaaEgCoJVnnxFfb5VmIlB980N9hUJaT" 
   
   - init: mvn install -Dsuite=parallel.xml # runs during prebuild
     command: echo 'Please check your test on https://automation.lambdatest.com/'
